version preparada antes de agregar swanger