@@ -2,15 +2,21 @@ package quantify.BoticaSaid.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import quantify.BoticaSaid.dto.ProductoRequest;
+import quantify.BoticaSaid.dto.ProductoResponse;
 import quantify.BoticaSaid.model.Producto;
 import quantify.BoticaSaid.model.Stock;
 import quantify.BoticaSaid.repository.ProductoRepository;
 import org.springframework.stereotype.Service;
 
+import java.math.BigDecimal;
+import java.util.HashMap;
 import java.util.List;
 import quantify.BoticaSaid.dto.AgregarStockRequest;
 import quantify.BoticaSaid.repository.StockRepository;
 import java.util.ArrayList;
+import java.util.Map;
+import java.util.stream.Collectors;
+
 
 @Service
 public class ProductoService {
@@ -21,13 +27,56 @@ public class ProductoService {
     @Autowired
     private StockRepository stockRepository;
 
-    // 1. Crear producto con stock (valida duplicidad por código de barras)
-    public Producto crearProductoConStock(ProductoRequest request) {
-        // Validar si ya existe ese código de barras
-        if (productoRepository.findByCodigoBarras(request.getCodigoBarras()) != null) {
-            throw new IllegalArgumentException("Ya existe un producto con ese código de barras.");
+    // 1. Crear producto con stock (valida duplicidad por código de barras, permite reactivar)
+    public Object crearProductoConStock(ProductoRequest request) {
+        Producto existente = productoRepository.findByCodigoBarras(request.getCodigoBarras());
+        if (existente != null) {
+            if (!existente.isActivo()) {
+                // Reactivar y actualizar datos
+                existente.setActivo(true);
+                existente.setNombre(request.getNombre());
+                existente.setConcentracion(request.getConcentracion());
+                existente.setCantidadGeneral(request.getCantidadGeneral());
+                existente.setPrecioVentaUnd(request.getPrecioVentaUnd());
+                existente.setDescuento(request.getDescuento());
+                existente.setLaboratorio(request.getLaboratorio());
+                existente.setCategoria(request.getCategoria());
+                // Actualiza stocks
+                if (request.getStocks() != null) {
+                    // Inicializa la lista si es null
+                    if (existente.getStocks() == null) {
+                        existente.setStocks(new ArrayList<>());
+                    }
+                    // Limpia la lista actual (elimina los stocks existentes)
+                    existente.getStocks().clear();
+                    // Agrega los nuevos stocks
+                    for (var stockReq : request.getStocks()) {
+                        Stock stock = new Stock();
+                        stock.setCantidadUnidades(stockReq.getCantidadUnidades());
+                        stock.setFechaVencimiento(stockReq.getFechaVencimiento());
+                        stock.setPrecioCompra(stockReq.getPrecioCompra());
+                        stock.setProducto(existente);
+                        existente.getStocks().add(stock);
+                    }
+                } else {
+                    // Si no hay stocks nuevos, limpia la lista existente
+                    if (existente.getStocks() != null) {
+                        existente.getStocks().clear();
+                    }
+                }
+                productoRepository.save(existente);
+
+                // Devuelve info especial para el frontend
+                Map<String, Object> response = new HashMap<>();
+                response.put("reactivado", true);
+                response.put("producto", existente);
+                return response;
+            } else {
+                throw new IllegalArgumentException("Ya existe un producto activo con ese código de barras.");
+            }
         }
 
+        // Crear producto normalmente
         Producto producto = new Producto();
         producto.setCodigoBarras(request.getCodigoBarras());
         producto.setNombre(request.getNombre());
@@ -37,8 +86,8 @@ public class ProductoService {
         producto.setDescuento(request.getDescuento());
         producto.setLaboratorio(request.getLaboratorio());
         producto.setCategoria(request.getCategoria());
+        producto.setActivo(true);
 
-        // Mapear stocks si vienen en la solicitud
         if (request.getStocks() != null && !request.getStocks().isEmpty()) {
             List<Stock> stocks = request.getStocks().stream().map(stockReq -> {
                 Stock stock = new Stock();
@@ -47,7 +96,7 @@ public class ProductoService {
                 stock.setPrecioCompra(stockReq.getPrecioCompra());
                 stock.setProducto(producto);
                 return stock;
-            }).toList();
+            }).collect(Collectors.toList());
             producto.setStocks(stocks);
         } else {
             producto.setStocks(new ArrayList<>());
@@ -56,23 +105,23 @@ public class ProductoService {
         return productoRepository.save(producto);
     }
 
-    // 2. Buscar producto por código de barras
+    // 2. Buscar producto por código de barras (solo activos)
     public Producto buscarPorCodigoBarras(String codigoBarras) {
-        return productoRepository.findByCodigoBarras(codigoBarras);
+        Producto prod = productoRepository.findByCodigoBarras(codigoBarras);
+        return (prod != null && prod.isActivo()) ? prod : null;
     }
 
-    // 3. Listar todos los productos
+    // 3. Listar todos los productos activos
     public List<Producto> listarTodos() {
-        return productoRepository.findAll();
+        return productoRepository.findByActivoTrue();
     }
 
     // 4. Agregar stock adicional
     public boolean agregarStock(AgregarStockRequest request) {
         Producto producto = productoRepository.findByCodigoBarras(request.getCodigoBarras());
-        if (producto == null) {
+        if (producto == null || !producto.isActivo()) {
             return false;
         }
-
         Stock nuevoStock = new Stock();
         nuevoStock.setCantidadUnidades(request.getCantidadUnidades());
         nuevoStock.setFechaVencimiento(request.getFechaVencimiento());
@@ -87,33 +136,34 @@ public class ProductoService {
         return true;
     }
 
-    // 5. Buscar por nombre o categoría
+    // 5. Buscar por nombre o categoría (solo activos)
     public List<Producto> buscarPorNombreOCategoria(String nombre, String categoria) {
         if (nombre != null && categoria != null) {
-            return productoRepository.findByNombreContainingIgnoreCaseAndCategoriaContainingIgnoreCase(nombre, categoria);
+            return productoRepository.findByNombreContainingIgnoreCaseAndCategoriaContainingIgnoreCaseAndActivoTrue(nombre, categoria);
         } else if (nombre != null) {
-            return productoRepository.findByNombreContainingIgnoreCase(nombre);
+            return productoRepository.findByNombreContainingIgnoreCaseAndActivoTrue(nombre);
         } else if (categoria != null) {
-            return productoRepository.findByCategoriaContainingIgnoreCase(categoria);
+            return productoRepository.findByCategoriaContainingIgnoreCaseAndActivoTrue(categoria);
         } else {
             return listarTodos();
         }
     }
 
-    // 6. Eliminar producto por código de barras
+    // 6. Borrado lógico (set activo=false)
     public boolean eliminarPorCodigoBarras(String codigoBarras) {
         Producto producto = productoRepository.findByCodigoBarras(codigoBarras);
-        if (producto != null) {
-            productoRepository.delete(producto);
+        if (producto != null && producto.isActivo()) {
+            producto.setActivo(false);
+            productoRepository.save(producto);
             return true;
         }
         return false;
     }
 
-    // 7. Actualizar datos de un producto
+    // 7. Actualizar datos de un producto (solo si activo)
     public Producto actualizarPorCodigoBarras(String codigoBarras, ProductoRequest request) {
         Producto producto = productoRepository.findByCodigoBarras(codigoBarras);
-        if (producto != null) {
+        if (producto != null && producto.isActivo()) {
             producto.setNombre(request.getNombre());
             producto.setConcentracion(request.getConcentracion());
             producto.setCantidadGeneral(request.getCantidadGeneral());
@@ -121,23 +171,33 @@ public class ProductoService {
             producto.setDescuento(request.getDescuento());
             producto.setLaboratorio(request.getLaboratorio());
             producto.setCategoria(request.getCategoria());
-            // No cambiar codigoBarras para evitar conflicto
             return productoRepository.save(producto);
         }
         return null;
     }
 
-    // 8. Buscar productos con stock menor a cierto umbral
+    // 8. Buscar productos con stock menor a cierto umbral (solo activos)
     public List<Producto> buscarProductosConStockMenorA(int umbral) {
-        List<Producto> productos = productoRepository.findAll();
+        List<Producto> productos = productoRepository.findByActivoTrue();
         List<Producto> resultado = new ArrayList<>();
-
         for (Producto p : productos) {
             if (p.getCantidadGeneral() < umbral) {
                 resultado.add(p);
             }
         }
-
         return resultado;
+    }
+
+    public ProductoResponse toProductoResponse(Producto producto) {
+        ProductoResponse resp = new ProductoResponse();
+        resp.setCodigoBarras(producto.getCodigoBarras());
+        resp.setNombre(producto.getNombre());
+        resp.setConcentracion(producto.getConcentracion());
+        resp.setCantidadGeneral(producto.getCantidadGeneral());
+        resp.setPrecioVentaUnd(producto.getPrecioVentaUnd());
+        resp.setDescuento(producto.getDescuento()); // ← PASA EL MONTO DIRECTO
+        resp.setLaboratorio(producto.getLaboratorio());
+        resp.setCategoria(producto.getCategoria());
+        return resp;
     }
 }
